changed variable names to make code clearer.

--- a/style/components/_schedule.scss
+++ b/style/components/_schedule.scss
@@ -1,5 +1,5 @@
 
-.day-card .__schedule {
+.day-menu .__schedule {
     background-color: $light-grey-3;
     position: relative;
     display: grid;
