--- a/style/main.scss
+++ b/style/main.scss
@@ -6,9 +6,9 @@
 @import "components/_nav-btn.scss";
 @import "components/_header.scss";
 @import "components/_selection-bar.scss";
-@import "components/_day-card.scss";
-@import "components/_task.scss";
+@import "components/_day-menu.scss";
+@import "components/_task-card.scss";
 @import "components/_schedule.scss";
 @import "components/_next-task.scss";
-@import "components/_task-card.scss";
+@import "components/_task-page.scss";
 @import "components/_footer.scss";
