--- a/style/components/_day-menu.scss
+++ b/style/components/_day-menu.scss
@@ -8,7 +8,7 @@
 }
 
 
-.day-card {
+.day-menu {
     background-color: $medium-grey-3;
     margin: 0em;
     display: grid;
@@ -40,7 +40,7 @@
             height: 50%;
         }
         
-        & .__date {
+        & .__date-short {
             position: absolute;
             @include day-title-bar-text;
             font-size: 1.8em;
