started working on new-design.

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,7 +1,7 @@
 
 
 $dark-grey-1: #282726;
-$dark-grey-2: #54504C;
+$dark-grey-2: #707070;
 $dark-grey-3: rgb(58, 56, 53);
 
 $medium-grey-1: #86817C;
@@ -11,3 +11,13 @@ $medium-grey-3: #B9B9B9;
 $light-grey-1: #D6CAB0;
 $light-grey-2: #EDF5E1;
 $light-grey-3: #F9F9F9;
+
+$medium-blue-1: #5B9CFF;
+$medium-blue-2: #619AF0;
+$medium-blue-3: #A4AAF9;
+$medium-blue-4: #448CF8;
+
+$light-blue-1: #A5C3F7;
+
+$lighter-blue-1: #B8F5FF;
+$lighter-blue-2: #B5C9FF;
