--- a/style/mainWindow/_layout.scss
+++ b/style/mainWindow/_layout.scss
@@ -8,17 +8,16 @@ body {
   background: linear-gradient(110deg, $medium-grey-2 20%, $light-grey-3 250%);
   font-family: "Calibri", serif;
   height: 100vh;
-  grid-template: "head head timer" 2fr
-                 "main  main main" 12fr
-                 "foot  foot foot" 1fr
-                 / 1fr 3.5fr 1.5fr;
+  grid-template: "head head head" 1fr
+                 "nav  main main" 6fr
+                 / 1fr 3.5fr 1fr;
 }
 
 .header {
   grid-area: head;
 }
 
-.day-selection-bar {
+.navigation-bar {
   grid-area: nav;
 }
 
@@ -30,29 +29,6 @@ body {
 .footer {
   grid-area: foot;
   min-height: 0;
-}
-
-.next-task {
-  grid-area: timer;
-}
-
-// Custom scroll bar
-
-::-webkit-scrollbar {
-  width: 0.8rem;
-}
-
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgba(linen, 0.4); 
-  transition: all 0.2s;
-
-  &:active {
-    background-color: rgba(linen, 0.6); 
-  }
 }
 
 .template {
