--- a/style/mainWindow/main.scss
+++ b/style/mainWindow/main.scss
@@ -1,14 +1,13 @@
 
-@import "_variables.scss";
+@import "../_variables.scss";
+@import "../_functions.scss";
 
 @import "_layout.scss";
 
-@import "components/_nav-btn.scss";
 @import "components/_header.scss";
-@import "components/_selection-bar.scss";
+@import "components/_navigation-bar.scss";
 @import "components/_day-menu.scss";
 @import "components/_task-card.scss";
 @import "components/_schedule.scss";
-@import "components/_next-task.scss";
 @import "components/_task-page.scss";
-@import "components/_footer.scss";
+
