--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -12,12 +12,19 @@ $light-grey-1: #D6CAB0;
 $light-grey-2: #EDF5E1;
 $light-grey-3: #F9F9F9;
 
+$dark-blue-1: #717AFF;
+$dark-blue-2: #3400FF;
+
 $medium-blue-1: #5B9CFF;
 $medium-blue-2: #619AF0;
 $medium-blue-3: #A4AAF9;
 $medium-blue-4: #448CF8;
+$medium-blue-5: #2D7AFF;;
 
 $light-blue-1: #A5C3F7;
+$light-blue-2: #73B9FF;
 
 $lighter-blue-1: #B8F5FF;
 $lighter-blue-2: #B5C9FF;
+
+$turquoise-1: #A1FFFF;
